--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-lazy-render",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "scripts": {
     "build": "gulp build",
     "build:watch": "gulp",
@@ -8,7 +8,7 @@
     "docs:build": "compodoc -p tsconfig.json -n angular-lazy-render -d docs --hideGenerator",
     "docs:serve": "npm run docs:build -- -s",
     "docs:watch": "npm run docs:build -- -s -w",
-    "lint": "tslint --type-check --project tsconfig.json src/**/*.ts",
+    "lint": "tslint --project tsconfig.json src/**/*.ts",
     "lite": "lite-server",
     "playground:build": "tsc -p playground -w",
     "playground": "concurrently \"npm run build:watch\" \"npm run playground:build\" \"npm run lite\""
@@ -32,37 +32,36 @@
     "url": "https://github.com/huanz/angular-lazy-render/issues"
   },
   "devDependencies": {
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@compodoc/compodoc": "^1.0.0-beta.10",
-    "@types/node": "~6.0.60",
-    "@types/jest": "^22.0.1",
-    "angular-in-memory-web-api": "^0.3.2",
-    "codelyzer": "~3.2.0",
-    "concurrently": "^3.4.0",
-    "core-js": "^2.4.1",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@compodoc/compodoc": "^1.0.7",
+    "@types/node": "~9.4.6",
+    "angular-in-memory-web-api": "^0.5.3",
+    "codelyzer": "~4.1.0",
+    "concurrently": "^3.5.1",
+    "core-js": "^2.5.3",
     "fs-extra": "^5.0.0",
-    "del": "^2.2.2",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
-    "gulp-rollup": "^2.11.0",
+    "gulp-rollup": "^2.16.2",
     "lite-server": "^2.3.0",
-    "node-sass": "^4.5.2",
-    "node-sass-tilde-importer": "^1.0.0",
-    "node-watch": "^0.5.2",
-    "protractor": "~5.1.2",
-    "rollup": "^0.49.3",
-    "run-sequence": "^1.2.2",
-    "rxjs": "^5.5.2",
-    "systemjs": "^0.20.12",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2",
-    "zone.js": "^0.8.14"
+    "node-sass": "^4.7.2",
+    "node-sass-tilde-importer": "^1.0.1",
+    "node-watch": "^0.5.7",
+    "protractor": "~5.3.0",
+    "rollup": "^0.56.3",
+    "run-sequence": "^2.2.1",
+    "rxjs": "^5.5.6",
+    "systemjs": "^0.21.0",
+    "ts-node": "~5.0.0",
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2",
+    "zone.js": "^0.8.20"
   },
   "engines": {
     "node": ">=6.0.0"
