--- a/package.json
+++ b/package.json
@@ -54,12 +54,10 @@
     "systemjs": "^0.21.0",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2",
-    "zone.js": "^0.8.20"
+    "zone.js": "^0.8.20",
+    "rollup-plugin-uglify": "^3.0.0"
   },
   "engines": {
     "node": ">=6.0.0"
-  },
-  "dependencies": {
-    "rollup-plugin-uglify": "^3.0.0"
   }
 }
