--- a/src/tsconfig.es5.json
+++ b/src/tsconfig.es5.json
@@ -20,7 +20,8 @@
   "angularCompilerOptions": {
     "annotateForClosureCompiler": true,
     "strictMetadataEmit": true,
-    "skipTemplateCodegen": true
+    "skipTemplateCodegen": true,
+    "flatModuleOutFile": "angular-lazy-render.js"
   },
   "files": [
     "./index.ts"
